--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>frontend</title>
+    <title>Procure-to-Pay System</title>
+    <meta name="description" content="Automated procurement workflow system with AI-powered document processing" />
   </head>
   <body>
     <div id="root"></div>
